--- a/rv2015/sections/Conclusion.tex
+++ b/rv2015/sections/Conclusion.tex
@@ -1,9 +1,10 @@
 %%%% Conclusion section
 
-\section{Conclusion}
+\section{Future Work and Conclusion}
 We have developed a runtime monitoring approach for an autonomous research vehicle. 
 %We have developed an online, real-time monitoring approach that targets an autonomous research vehicle, describing our experience. 
 Rather than instrumenting the target system, we passively monitor the system, generating the system trace from the observed network state.
 We have developed an efficient runtime monitoring algorithm, \monitor, that eagerly checks for violations of properties written in our future-bounded propositional MTL. 
+Future work includes exploring using multi-core monitors to provide increased monitoring power as well as further formalizing the interface mapping (possibly with a domain specific language).
 We have shown the efficiency of \monitor by implementing it and evaluating it against logs obtained from system testing of the ARV. 
 \monitor was able to detect violations of several safety requirements in real-time.
