--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -39,7 +39,7 @@
 %\doublespace
 \usepackage{algorithmic}
 %%% Omar based packages
-\usepackage{ltlfonts}	
+\usepackage{ltlfonts}
 \usepackage{mathtools}
 \usepackage{xspace}
 
@@ -72,7 +72,7 @@
 
 \author{Aaron Kane\inst{1} \and Omar Chowdhury\inst{2} \and Anupam Datta\inst{1} \and Philip Koopman\inst{1}}
 \institute{Carnegie Mellon University, Pittsburgh, PA
-			\and  Purdue University, IN\\ 
+			\and  Purdue University, IN\\
 			\email{akane@cmu.edu, ochowdhu@purdue.edu, danupam@cmu.edu, koopman@cmu.edu}}
 
 
@@ -83,48 +83,71 @@
 \input{command}
 
 \begin{abstract}
-
-Although runtime monitoring is a promising technique to improve the verification of complex safety-critical systems, 
-the general design trend towards utilizing black-box commercial-off-the-shelf (COTS) components means that these systems 
-are not always amenable to instrumentation which is commonly used to produce the relevant events necessary for checking 
-the desired properties. In this paper, we develop an online, real-time monitoring approach that targets an autonomous research 
-vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by 
-generating high-level property constructs (\ie, propositions) from the observed network state. 
-We then develop an efficient runtime monitoring algorithm, \monitor, that \emph{eagerly} checks for violations of desired properties 
-written in a future-bounded, propositional metric temporal logic. 
-We show the efficacy of \monitor by implementing it and empirically evaluating it against logs obtained from 
+Runtime monitoring is a versatile technique
+for detecting property violations in
+ safety-critical (SC) systems.
+Although instrumentation of the system under monitoring is
+a common approach for obtaining the events necessary
+for checking the desired properties,
+the current trend of using black-box commercial-off-the-shelf components
+in SC system development makes these systems  unamenable to instrumentation.
+%
+%, us of
+%black-box commercial-off-the-shelf (COTS) components
+%in the development of these safety-critical systems
+%makes
+%
+%However,
+%
+%
+%the general design trend of these systems
+%is to utilize
+%towards utilizing
+%black-box commercial-off-the-shelf (COTS) components
+%which signifies
+%means
+%that these systems
+%that means these systems
+%are not always amenable to \emph{instrumentation} which is commonly used to produce the relevant events necessary for checking
+%the desired safety properties.
+In this paper, we develop an online runtime monitoring approach that targets an autonomous research
+vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by
+generating high-level property constructs (propositions) from the observed network state.
+We then develop an efficient runtime monitoring algorithm, \monitor, that \emph{eagerly} checks for violations of desired properties
+written in a future-bounded, propositional metric temporal logic.
+We show the efficacy of \monitor by implementing it and empirically evaluating it against logs obtained from
 the testing of an ARV system. \monitor was able to detect violations of several safety requirements.
 
 
 
-%It is paramount for safety-critical (SC) systems to be formally verified to avoid 
-%catastrophic consequences  of malfunctioning (\eg, loss of life) due to bugs. 
-%However, static verification techniques like model checking might not be a feasible option in this context due to the state-space 
-%explosion problem. Runtime monitoring (RM) is a promising alternative 
-%%to its static counterpart 
-%that can check the execution of SC systems for violations of some desired properties in runtime. One possibility of using RM in this context is to instrument 
-%the system 
-%%under-monitoring 
-%%to 
-%in such a way so that it 
-%produces the relevant events for checking the desired 
-%properties. However, there is a general trend of using commercial-off-the-shelf (COTS) components 
-%while designing SC systems and these components are like blackboxes and hence might not be amenable to  
-%intrumentation. In this paper, we develop a RM approach that monitors an autonomous research vehicle (ARV) system and recount our experience with it. 
-%The ARV system uses several COTS components hence our monitor passively and periodically samples the ARV system bus 
-%%(\ie, the  channel 
-%%with which different components of the ARV system communicate among each other) 
-%and converts the low level signals to high level 
-%property-constructs (\ie, propositions). For specifying the desired properties, we use a propositional discrete-time temporal logic, Metric Temporal Logic (MTL). 
-%We then develop an efficient runtime monitoring algorithm, \monitor, that takes as input a MTL property \policy and a finite trace $\sigma$, and \emph{eagerly} 
-%checks for violation of \policy in $\sigma$. We show the efficacy of \monitor by implementing it and empirically evaluating it  
-%with some well-defined desired safety properties and against logs obtained from the testing of an ARV system. 
-%\monitor were able to detect violations of several safety requirements. 
+%It is paramount for safety-critical (SC) systems to be formally verified to avoid
+%catastrophic consequences  of malfunctioning (\eg, loss of life) due to bugs.
+%However, static verification techniques like model checking might not be a feasible option in this context due to the state-space
+%explosion problem. Runtime monitoring (RM) is a promising alternative
+%%to its static counterpart
+%that can check the execution of SC systems for violations of some desired properties in runtime. One possibility of using RM in this context is to instrument
+%the system
+%%under-monitoring
+%%to
+%in such a way so that it
+%produces the relevant events for checking the desired
+%properties. However, there is a general trend of using commercial-off-the-shelf (COTS) components
+%while designing SC systems and these components are like blackboxes and hence might not be amenable to
+%intrumentation. In this paper, we develop a RM approach that monitors an autonomous research vehicle (ARV) system and recount our experience with it.
+%The ARV system uses several COTS components hence our monitor passively and periodically samples the ARV system bus
+%%(\ie, the  channel
+%%with which different components of the ARV system communicate among each other)
+%and converts the low level signals to high level
+%property-constructs (\ie, propositions). For specifying the desired properties, we use a propositional discrete-time temporal logic, Metric Temporal Logic (MTL).
+%We then develop an efficient runtime monitoring algorithm, \monitor, that takes as input a MTL property \policy and a finite trace $\sigma$, and \emph{eagerly}
+%checks for violation of \policy in $\sigma$. We show the efficacy of \monitor by implementing it and empirically evaluating it
+%with some well-defined desired safety properties and against logs obtained from the testing of an ARV system.
+%\monitor were able to detect violations of several safety requirements.
 %%%% major points to push
 %%%
 %%% dynamic programming algorithm
 %%% 	also rewriting-based to a point
-%%% embedded runtime monitor 
+%%% embedded runtime monitor
 %%%	handles black-box systems
 %%% 	reasonable overhead
 %%%	aggressive monitoring, future/past (some specifications get checked faster in future then past)
