--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -87,7 +87,7 @@ Runtime monitoring is a versatile technique
 for detecting property violations in
  safety-critical (SC) systems.
 Although instrumentation of the system under monitoring is
-a common approach for obtaining the events necessary
+a common approach for obtaining the events relevant
 for checking the desired properties,
 the current trend of using black-box commercial-off-the-shelf components
 in SC system development makes these systems  unamenable to instrumentation.
@@ -112,7 +112,7 @@ in SC system development makes these systems  unamenable to instrumentation.
 %the desired safety properties.
 In this paper, we develop an online runtime monitoring approach that targets an autonomous research
 vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by
-generating high-level property constructs (propositions) from the observed network state.
+generating atomic property constructs (propositions) from the observed network state.
 We then develop an efficient runtime monitoring algorithm, \monitor, that \emph{eagerly} checks for violations of desired properties
 written in a future-bounded, propositional metric temporal logic.
 We show the efficacy of \monitor by implementing it and empirically evaluating it against logs obtained from
