done with background and conclusion. I might go over the background once again to check for typos and stuff.

--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -7,6 +7,28 @@
   timestamp = {2014.12.31}
 }
 
+@incollection{DHF14,
+year={2014},
+booktitle={Runtime Verification},
+title={On-Line Monitoring for Temporal Logic Robustness},
+author={Dokhanchi, Adel and Hoxha, Bardh and Fainekos, Georgios}
+}
+
+@incollection{NM07,
+year={2007},
+booktitle={Formal Modeling and Analysis of Timed Systems},
+title={AMT: A Property-Based Monitoring Tool for Analog Systems},
+author={Nickovic, Dejan and Maler, Oded}
+}
+
+@inproceedings{DFM13,
+    title = { Efficient Robust Monitoring for STL },
+    author = {Donz\'e, Alexandre and Ferr\'ere, Thomas and Maler, Oded},
+    year = {2013},
+    booktitle = {CAV},
+    team = {TEMPO},
+}
+
 @INPROCEEDINGS{Basin2008,
   author = {David Basin and Felix Klaedtke and Samuel Müller and Birgit Pfitzmann},
   title = {Runtime Monitoring of Metric First-order Temporal Properties},
@@ -92,20 +114,8 @@
 @INCOLLECTION{Chowdhury2014,
   author = {Chowdhury, Omar and Jia, Limin and Garg, Deepak and Datta, Anupam},
   title = {Temporal Mode-Checking for Runtime Monitoring of Privacy Policies},
-  booktitle = {Computer Aided Verification},
-  publisher = {Springer International Publishing},
-  year = {2014},
-  //editor = {Biere, Armin and Bloem, Roderick},
-  //volume = {8559},
-  //series = {Lecture Notes in Computer Science},
-  //pages = {131-149},
-  doi = {10.1007/978-3-319-08867-9_9},
-  file = {Chowdhury2014.pdf:mPapers\\Chowdhury2014.pdf:PDF},
-  isbn = {978-3-319-08866-2},
-  keywords = {Mode checking; runtime monitoring; metric first-order temporal logic;
-	privacy policy},
-  language = {English},
-  timestamp = {2014.12.23},
+  booktitle = {CAV},
+  year = {2014}
 }
 
 @ARTICLE{Clarke1996,
@@ -149,10 +159,9 @@
 @inproceedings{garg2011policy,
   title={Policy auditing over incomplete logs: theory, implementation and applications},
     author={Garg, Deepak and Jia, Limin and Datta, Anupam},
-	  booktitle={Proceedings of the 18th ACM conference on Computer and communications security},
+	  booktitle={Proceedings of the 18th ACM CCS},
 	    pages={151--162},
-		  year={2011},
-		    organization={ACM}
+		  year={2011}
 }
 @ARTICLE{Goodloe2010,
   author = {Goodloe, Alwyn and Pike, Lee},
