--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -6,23 +6,25 @@
 	% they require a predictive component in the system  -- we just want envelope
 	% horizon is delay
 	% observation map is semi-formal mapping
-In this section we briefly introduce the background concepts and review relevant existing work that put the current work in perspective.  
+In this section we briefly introduce the background concepts and discuss relevant existing work that will put the current work in perspective.
 
-\textbf{Monitoring safety-critical embedded systems.}
+\vspace*{3pt}
+\noindent
+\textbf{Monitoring architecture.}
 %\label{sec:bg:sc_monitor}
-Goodloe and Pike present a thorough survey of monitoring distributed real-time systems in \cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and propose three abstract monitor architectures in the context of monitoring these types of systems.
+Goodloe and Pike present a thorough survey of monitoring distributed real-time systems  \cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and propose three abstract monitor architectures in the context of monitoring these types of systems.
 %
-%In \cite{Pike2011} Pike et. al update these constraints with the acronym ``FaCTS'': Functionality, Certifiability, Timing, and SWaP (size, weight and power). 
+%In \cite{Pike2011} Pike et. al update these constraints with the acronym ``FaCTS'': Functionality, Certifiability, Timing, and SWaP (size, weight and power).
 %These constraints emphasize the need for strong isolation between the target system and the monitor. Without isolation, the monitor may affect the target system in a way which could cause a system failure (e.g., disrupting system timing, adding extensive development costs, etc).
-%The Functionality constraint demands that a monitor cannot change the system under observation's (SUO's) behavior unless the target has violated the system specification. 
+%The Functionality constraint demands that a monitor cannot change the system under observation's (SUO's) behavior unless the target has violated the system specification.
 %The Timing constraint similarly says that the monitor can not interfere with the non-faulty SUO's timing (e.g., task period/deadlines).
 %The Certifiability constraint is a softer constraint, arguing that a monitor should not make re-certification of SUO onerous. This is important because certification can be a major portion of design cost for these systems and nominally simple changes/additions to the SUO can require a broad and costly recertification.
 %Lastly, safety critical systems are often extremely cost sensitive with tight tolerances for additional physical size, weight or required power. Any monitor we wish to add to an existing system must fit within these existing tolerances.
-%The three monitor architectures proposed by Goodloe and Pike are the Bus-Monitor Architecture, the single process monitor architecture, and the distributed process monitor architecture. 
-One of Goodloe and Pike's proposed distributed real-time system monitor architectures is the bus-monitor architecture.
+%The three monitor architectures proposed by Goodloe and Pike are the Bus-Monitor Architecture, the single process monitor architecture, and the distributed process monitor architecture.
+One of the proposed distributed real-time system monitor architectures is the bus-monitor architecture.
 This architecture contains an external monitor which receives network messages over an existing system bus, acting as another system component.
-The monitor can be configured in a silent or receive only mode to ensure it does not perturb the system. 
-This is a simple architecture which requires few (essentially no) changes to the target system architecture. We utilize this architecture for our monitoring framework. 
+The monitor can be configured in a silent or receive only mode to ensure it does not perturb the system.
+This is a simple architecture which requires minor changes to the target system architecture. We utilize this architecture for our monitoring framework.
 
 %%%% NEED TO SHRINK THIS DOWN TO A PAGE OR TWO
 %%%% 	focus on the actual similar algorithms (Thati/Rosu, Havelund, etc)
@@ -35,41 +37,65 @@ This is a simple architecture which requires few (essentially no) changes to the
 %%% Reinbacher
 %%% Heffernan
 %%% Precis
-\textbf{Monitors.}
-Our monitoring algorithm is similar to existing dynamic programming and formula-rewriting based algorithms. 
+\vspace*{3pt}
+\noindent
+\textbf{Monitoring algorithm.}
+Our monitoring algorithm is similar to existing dynamic programming and
+formula-rewriting based algorithms \cite{Havelund2004,Havelund2002,Rosu2005,Thati2005,Basin2012}.
 % need to get good novelty wording
 % topics:
 %	real-time eager checking of future properties
 %	hybrid eager checking for efficiency
 %	practical experience showing suitability of our language for safety monitoring
-%The primary novelty in our approach is the combination of eager and delayed checking for real-time monitoring, 
+%The primary novelty in our approach is the combination of eager and delayed checking for real-time monitoring,
 Our main area of novelty is the combination of eager and conservative specification checking used in a practical setting showing the suitability of our bounded future logic for safety monitoring.
-
-\textit{Dynamic programming monitors.}
+%\textit{Dynamic programming monitors.}
 %% garg/precis
-Our monitoring algorithm is inspired by the algorithms \greduce \cite{Garg2011} and \precis \cite{Chowdhury2014}, adjusted for propositional logic and eager checking. 
-The structure of our algorithm is based on \greduce. 
-We utilize an iterative, formula-rewriting based algorithm targeted at both offline log analysis as well as runtime monitoring. 
-Both \greduce and \precis can handle future incompleteness but \greduce also considers incompleteness for missing information which we do not consider. 
-\precis and \monitor both require the input trace to contain complete information.  
-
-%return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness. 
-
-%% dynamic prog algos -- thati/rosu, havelund, etc
-The NASA PathExplorer project has led to both a set of dynamic programming-based monitoring algorithms as well as some formula-rewriting based algorithms \cite{Havelund2004} for past-time LTL. These dynamic programming algorithms require checking the trace in reverse (from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}. The formula rewriting algorithms utilize the Maude term rewriting engine to efficiently monitor specifications through formula rewriting \cite{Rosu2005}. 
+Our monitoring algorithm is inspired by the algorithms \greduce \cite{Garg2011} and \precis \cite{Chowdhury2014}, adjusted for propositional logic and eager checking.
+The structure of our algorithm is based on \greduce.
+We utilize an iterative, formula-rewriting based algorithm targeted at both offline log analysis as well as runtime monitoring.
+Both \greduce and \precis can handle future incompleteness but \greduce also considers incompleteness for missing information which we do not consider.
+\precis and \monitor both require the input trace to contain complete information.
 %
-Thati and Ro\c{s}u \cite{Thati2005} describe an dynamic programming algorithm for monitoring MTL which is based on resolving the past and deriving the future. They perform formula rewriting which resolves past-time formulas into equivalent formulas without unguarded past-time operators and derive new future-time formulas which separate the current state from future state. 
-While they have a tight encoding of their canonical formulas, they still require more state to be stored than some other algorithms (because formulas grow in size as they are rewritten), including this work.
+% return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness.
+%
+% % dynamic prog algos -- thati/rosu, havelund, etc
+The NASA PathExplorer project has led to both a set of dynamic programming-based monitoring algorithms as
+well as some formula-rewriting based algorithms \cite{Havelund2004} for past-time LTL.
+These dynamic programming algorithms require checking the trace in reverse
+(from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}.
+The formula rewriting algorithms utilize the Maude term rewriting engine to efficiently monitor specifications
+through formula rewriting \cite{Rosu2005}.
+%
+Thati and Ro\c{s}u \cite{Thati2005} describe an dynamic programming algorithm for monitoring MTL which is based on resolving the past and deriving the future.
+They perform formula rewriting which resolves past-time formulas into equivalent formulas without unguarded past-time operators and derive new future-time
+formulas which separate the current state from future state.
+While they have a tight encoding of their canonical formulas, they still require more state to be stored than some other algorithms (because formulas
+grow in size as they are rewritten), including this work.
 %Their evaluation algorithm is similar to ours, but they require more storage space to handle formula rewriting with potentially growing formulas.
 
 
-\textit{Embedded Monitors.}
+%\textit{Embedded Monitors.}
 %% Hef/Rein
-Heffernan et. al. present a monitor for automotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}. They monitor past-time linear temporal logic (LTL) formulas and obtain system state from target system buses (CAN in their example). Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored. Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
-Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors. 
+Heffernan et. al. present a monitor for automotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}.
+They monitor past-time linear temporal logic (LTL) formulas and obtain system state from target system buses (CAN in their example).
+Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored.
+Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
+Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors.
 The actual implementation they describe does however presume system memory access to obtain system state (rather than using state from the target network).
-
-Pellizzoni et. al. describe a monitor for COTS peripherals in \cite{Pellizzoni2008}. They generate FPGA monitors that passively observe PCI-E buses to verify system properties. This is a similar architecture to ours, but they only check past-time LTL and regular expressions so they cannot perform eager checking.
+Pellizzoni et. al. describe a monitor for COTS peripherals in \cite{Pellizzoni2008}.
+They generate FPGA monitors that passively observe PCI-E buses to verify system properties.
+Although their architecture is similar to ours, but they only check past-time LTL and
+regular expressions which cannot capture timing properties.
 %%%%%%%%%%%%%%
-
-Basin et. al. compare algorithms for monitoring real-time MTL properties in \cite{Basin2012}. Our monitoring algorithm works similarly to their point-based monitoring algorithm, iteratively calculating truth values over the formula structure using history lists. Though they discuss the use of delay queues to monitor future-time properties (and thus do not eagerly check future-time formulas), we could integrate their algorithm into our eager monitoring framework.
+Basin et. al. compare runtime monitoring algorithms for MTL properties \cite{Basin2012}.
+\monitor works similarly to their point-based monitoring algorithm but \monitor checks
+future temporal operators more aggresively.
+Donz\'e \etal \cite{DFM13} developed a robustness monitor for Signal Temporal Logic (STL) which
+supports continuous signals. We consider discrete events. Similarly, Dokhanchi \etal \cite{DHF14}
+developed an online runtime monitoring algorithm for checking the robustness of formulas written in a
+MTL fragment that we use. We on the contrary consider satisfaction of the formula instead of robustness.
+Finally, Nickovic and Maler \cite{NM07} developed the  AWT tool which monitors analog systems.
+We only consider discrete events instead of continous signals like them.
+% Though they discuss the use of
+% delay queues to monitor future-time properties (and thus do not eagerly check future-time formulas), we could integrate their algorithm into our eager monitoring framework.
