a little changes to everything :-)

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -86,8 +86,8 @@
 
 \newcommand{\funcname}[1]{\textbf{\texttt{#1}}}
 
-\newcommand{\cc}{\funcname{checkCompliance}\xspace} % checkCompliance 
-\newcommand{\bts}{\funcname{uSS}\xspace} %buildTemporalStructure 
+\newcommand{\cc}{\funcname{checkCompliance}\xspace} % checkCompliance
+\newcommand{\bts}{\funcname{uSS}\xspace} %buildTemporalStructure
 \newcommand{\ips}{\funcname{ips}\xspace} % isPolicySatisfied
 \newcommand{\sat}{\funcname{sat}\xspace} % sat predicate axiom
 % \newcommand{\dom}{\funcname{domain}\xspace} %domain
@@ -166,5 +166,5 @@
 \newcommand{\histst}[2][\policy]{\ensuremath{{S}^{#2}_{#1}}}
 \newcommand{\incrS}{\funcname{incrS}\xspace}
 \newcommand{\policyv}{\ensuremath{\phi}\xspace}
-\newcommand{\sfmap}{\textsf{SF Map}\xspace}
+\newcommand{\sfmap}{\textsf{StP}\xspace}
 \newcommand{\natlangrule}[1]{\textit{#1}}
