--- a/rv2015/sections/Conclusion.tex
+++ b/rv2015/sections/Conclusion.tex
@@ -1,6 +1,6 @@
 %%%% Conclusion section
 
-\section{Future Work and Conclusion}
+\section{Conclusion and Future Work}
 We have developed a runtime monitoring approach for an ARV system.
 Instead of instrumention, we passively monitor the system,
 generating the system trace from the observed network state.
