--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -6,13 +6,16 @@
 	% they require a predictive component in the system  -- we just want envelope
 	% horizon is delay
 	% observation map is semi-formal mapping
-In this section we briefly introduce the background concepts and discuss relevant existing work that will put the current work in perspective.
+In this section we briefly introduce the background concepts and
+discuss relevant existing work that will put the current work in perspective.
 
 \vspace*{3pt}
 \noindent
 \textbf{Monitoring architecture.}
 %\label{sec:bg:sc_monitor}
-Goodloe and Pike present a thorough survey of monitoring distributed real-time systems  \cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and propose three abstract monitor architectures in the context of monitoring these types of systems.
+Goodloe and Pike present a thorough survey of monitoring distributed real-time systems
+\cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and
+propose three abstract monitor architectures in the context of monitoring these types of systems.
 %
 %In \cite{Pike2011} Pike et. al update these constraints with the acronym ``FaCTS'': Functionality, Certifiability, Timing, and SWaP (size, weight and power).
 %These constraints emphasize the need for strong isolation between the target system and the monitor. Without isolation, the monitor may affect the target system in a way which could cause a system failure (e.g., disrupting system timing, adding extensive development costs, etc).
@@ -24,7 +27,8 @@ Goodloe and Pike present a thorough survey of monitoring distributed real-time s
 One of the proposed distributed real-time system monitor architectures is the bus-monitor architecture.
 This architecture contains an external monitor which receives network messages over an existing system bus, acting as another system component.
 The monitor can be configured in a silent or receive only mode to ensure it does not perturb the system.
-This is a simple architecture which requires minor changes to the target system architecture. We utilize this architecture for our monitoring framework.
+This is a simple architecture which requires minor changes to the target system.
+We utilize this architecture for our monitoring framework.
 
 %%%% NEED TO SHRINK THIS DOWN TO A PAGE OR TWO
 %%%% 	focus on the actual similar algorithms (Thati/Rosu, Havelund, etc)
@@ -51,37 +55,45 @@ formula-rewriting based algorithms \cite{Havelund2004,Havelund2002,Rosu2005,That
 Our main area of novelty is the combination of eager and conservative specification checking used in a practical setting showing the suitability of our bounded future logic for safety monitoring.
 %\textit{Dynamic programming monitors.}
 %% garg/precis
-Our monitoring algorithm is inspired by the algorithms \greduce \cite{Garg2011} and \precis \cite{Chowdhury2014}, adjusted for propositional logic and eager checking.
+Our monitoring algorithm is inspired by the algorithms \greduce \cite{Garg2011} and
+\precis \cite{Chowdhury2014}, adjusted for propositional logic and eager checking.
 The structure of our algorithm is based on \greduce.
-We utilize an iterative, formula-rewriting based algorithm targeted at both offline log analysis as well as runtime monitoring.
-Both \greduce and \precis can handle future incompleteness but \greduce also considers incompleteness for missing information which we do not consider.
-\precis and \monitor both require the input trace to contain complete information.
+% We utilize an iterative, formula-rewriting based algorithm targeted at both offline log analysis as well as runtime monitoring.
+\greduce, \precis, and \monitor can handle future incompleteness but \greduce additionally
+considers incompleteness for missing information which we do not consider.
+% \precis and \monitor both require the input trace to contain complete information.
 %
 % return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness.
 %
 % % dynamic prog algos -- thati/rosu, havelund, etc
 The NASA PathExplorer project has led to both a set of dynamic programming-based monitoring algorithms as
 well as some formula-rewriting based algorithms \cite{Havelund2004} for past-time LTL.
-These dynamic programming algorithms require checking the trace in reverse
-(from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}.
+% These dynamic programming algorithms require checking the trace in reverse
+% (from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}.
 The formula rewriting algorithms utilize the Maude term rewriting engine to efficiently monitor specifications
 through formula rewriting \cite{Rosu2005}.
 %
-Thati and Ro\c{s}u \cite{Thati2005} describe an dynamic programming algorithm for monitoring MTL which is based on resolving the past and deriving the future.
-They perform formula rewriting which resolves past-time formulas into equivalent formulas without unguarded past-time operators and derive new future-time
+Thati and Ro\c{s}u \cite{Thati2005} describe a dynamic programming and rewriting-based
+algorithm for monitoring MTL formulas.
+% which is based on resolving the past and deriving the future.
+They perform formula rewriting which resolves past-time formulas
+into equivalent formulas without unguarded past-time operators and derive new future-time
 formulas which separate the current state from future state.
-While they have a tight encoding of their canonical formulas, they still require more state to be stored than some other algorithms (because formulas
+While they have a tight encoding of their canonical formulas, they still require more memory
+than some existing algorithms (because formulas
 grow in size as they are rewritten), including this work.
 %Their evaluation algorithm is similar to ours, but they require more storage space to handle formula rewriting with potentially growing formulas.
 
 
 %\textit{Embedded Monitors.}
 %% Hef/Rein
-Heffernan et. al. present a monitor for automotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}.
+Heffernan et. al. present a monitor for automotive systems using ISO 26262 as a guide
+to identify the monitored properties  \cite{Heffernan2014}.
 They monitor past-time linear temporal logic (LTL) formulas and obtain system state from target system buses (CAN in their example).
-Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored.
-Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
-Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors.
+Our \sfmap component is similar to their ``filters'' used to translate system state to the atomic propositions used in the policy.
+Their motivation and goals are similar to ours, but they use system-on-a-chip based
+monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box commercial-off-the-shelf (COTS)
+systems. Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors.
 The actual implementation they describe does however presume system memory access to obtain system state (rather than using state from the target network).
 Pellizzoni et. al. describe a monitor for COTS peripherals in \cite{Pellizzoni2008}.
 They generate FPGA monitors that passively observe PCI-E buses to verify system properties.
@@ -92,10 +104,11 @@ Basin et. al. compare runtime monitoring algorithms for MTL properties \cite{Bas
 \monitor works similarly to their point-based monitoring algorithm but \monitor checks
 future temporal operators more aggresively.
 Donz\'e \etal \cite{DFM13} developed a robustness monitor for Signal Temporal Logic (STL) which
-supports continuous signals. We consider discrete events. Similarly, Dokhanchi \etal \cite{DHF14}
+supports continuous signals.
+Nickovic and Maler \cite{NM07} developed the  AWT tool which monitors analog systems.
+We only consider discrete events. Dokhanchi \etal \cite{DHF14}
 developed an online runtime monitoring algorithm for checking the robustness of formulas written in a
-MTL fragment that we use. We on the contrary consider satisfaction of the formula instead of robustness.
-Finally, Nickovic and Maler \cite{NM07} developed the  AWT tool which monitors analog systems.
-We only consider discrete events instead of continous signals like them.
+future-bounded MTL fragment. We use the same MTL fragment but we consider satisfaction of the formula
+instead of robustness.
 % Though they discuss the use of
 % delay queues to monitor future-time properties (and thus do not eagerly check future-time formulas), we could integrate their algorithm into our eager monitoring framework.
