--- a/rv2015/sections/Intro.tex
+++ b/rv2015/sections/Intro.tex
@@ -14,7 +14,7 @@ properties.
 When the monitor detects a violation of a property, it notifies a command module which then attempts to recover from the violation. \emph{In this paper, we develop a runtime monitor that monitors an autonomous research vehicle (ARV) and describe our experience with it}.
 
 The ARV is an autonomous heavy truck which is being designed for use in vehicle platoons. It is representative of common modern ground vehicle designs.
-These systems are generally built by system integrators who utilize commercial-off-the-shelf components, some of which may be provided as black-box systems,
+These systems are generally built by system integrators who utilize commercial-off-the-shelf  components, some of which may be provided as black-box systems,
 developed from multiple vendors.
 %The ARV system we consider are built by system integrators utilizing multiple vendors and commercial-off-the-shelf (COTS) components, some of which can be viewed as black box components for the integrator.
 These systems are also often hard real-time systems which leads to additional constraints on system monitoring \cite{Goodloe2010}.
@@ -33,11 +33,11 @@ Controller area network (CAN) is a
 %common and
 standard broadcast bus for ground vehicles which is the primary system bus in the ARV. We can obtain useful amounts of system state relevant information for monitoring
 the system safety specification by observing the data within the CAN messages that are broadcasted between system components.
-However, before we can start monitoring the ARV system, we need a component, which we call the \textsf{SF Map}, that observes messages transmitted on the bus and decodes
+However, before we can start monitoring the ARV system, we need a component, which we call the \sfmap (in short, \emph{state to proposition}), that observes messages transmitted on the bus and decodes
 them into propositions relevant to monitoring which are then fed into the monitor.
-This acts similarly to the low-level specification and filter/event recognizers from MaC \cite{Kim2004}.
+% This acts similarly to the low-level specification and filter/event recognizers from MaC \cite{Kim2004}.
 We want to emphasize that the limits of external observability can cause significant challenges
-in designing the \textsf{SF Map} when considering the state available from the system messages and
+in designing the \sfmap when considering the state available from the system messages and
 the necessary atomic policy-constructs \cite{Kane2014}.
 %We want to emphasize that depending on the granularity of the information available in the messages and the necessary atomic policy-constructs, developing the \textsf{SF Map} poses a significant challenge.
 
@@ -45,9 +45,10 @@ the necessary atomic policy-constructs \cite{Kane2014}.
 \textit{Specification logic.}
 To obtain the relevant safety requirements and invariants for monitoring the ARV system we consulted the safety requirements of the ARV system.
 We observed that many desired properties for these types of systems are timing related, so using an explicit-time based specification language for expressing these properties is helpful.
-System requirements of the form ``\emph{the system must perform action $a$ within $t$ seconds of event $e$}'' are common,
-%
-for instance, ``\emph{Cruise control shall disengage for 250ms within 500ms of the brake pedal being depressed}''.
+System requirements like
+ of the form ``\emph{the system must perform action $a$ within $t$ seconds of event $e$}'' are common,
+ for instance,
+``\emph{Cruise control shall disengage for 250ms within 500ms of the brake pedal being depressed}''.
 %
 For efficient monitoring, we use a fragment of propositional, discrete time metric temporal logic (MTL)\cite{Koymans1990} in which the
 %bound
