Removed section 3 and incorporated some of the text in Section 2.

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -159,7 +159,7 @@ the testing of an ARV system. \monitor was able to detect violations of several 
 
 \input{sections/Intro}
 \input{sections/Background}
-\input{sections/Architecture}
+% \input{sections/Architecture}
 \input{sections/Algorithm}
 \input{sections/Implementation}
 %\input{sections/Case_Study}
