--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -41,6 +41,30 @@ We utilize this architecture for our monitoring framework.
 %%% Reinbacher
 %%% Heffernan
 %%% Precis
+
+\vspace*{3pt}
+\noindent
+\textbf{Controller area network.} Controller Area Network is a
+widely used automotive network developed by Bosch
+in the 1980s \cite{Bosch1991}. In this work we  primarily focus on CAN as
+it is a common automotive bus which typically conveys enough of the state
+information so that we can check for interesting safety properties of the system.
+CAN is an event-based broadcast network with data rates up to 1Mb/s.
+Messages on CAN are broadcast with an identifier which is used to denote
+both the message and the intended recipients.
+The message identifiers are also used as the message priorities for access control.
+Although CAN is an event-based bus,
+it is often used with periodic scheduling schemes so the network usage can be statically
+analyzed. Hence, our monitoring approach is based on a time-triggered, network sampling
+model which allows it to monitor time-triggered networks as well.
+We add \monitor as a
+passive external bus-monitor which can only check system properties
+that are observable by passive
+observation of the messages transmitted through CAN.
+
+
+
+
 \vspace*{3pt}
 \noindent
 \textbf{Monitoring algorithm.}
